
[0.3.0]
- Full rewrite (based on tonal)

[0.2.1]
- Last of the oo version